API to refresh tiles for modified models.

--- a/test-apps/display-test-app/public/locales/en/SVTTools.json
+++ b/test-apps/display-test-app/public/locales/en/SVTTools.json
@@ -12,6 +12,9 @@
     },
     "SVTSelect": {
       "keyin": "svt select"
+    },
+    "RefreshTiles": {
+      "keyin": "dta refresh tiles"
     }
   }
 }
