--- a/core/i18n/CHANGELOG.json
+++ b/core/i18n/CHANGELOG.json
@@ -2,6 +2,12 @@
   "name": "@bentley/imodeljs-i18n",
   "entries": [
     {
+      "version": "1.4.0",
+      "tag": "@bentley/imodeljs-i18n_v1.4.0",
+      "date": "Tue, 10 Sep 2019 12:09:49 GMT",
+      "comments": {}
+    },
+    {
       "version": "1.3.0",
       "tag": "@bentley/imodeljs-i18n_v1.3.0",
       "date": "Tue, 13 Aug 2019 20:25:53 GMT",
