--- a/test-apps/display-test-app/public/locales/en/SVTTools.json
+++ b/test-apps/display-test-app/public/locales/en/SVTTools.json
@@ -58,6 +58,9 @@
     },
     "ToggleFrustumIntersection": {
       "keyin": "dta frustum intersection"
+    },
+    "PurgeTileTrees": {
+      "keyin": "dta purge tiletrees"
     }
   }
 }
