fdt select elements (by ids) EN #212157 EN #212158

--- a/core/frontend-devtools/public/locales/en/FrontendDevTools.json
+++ b/core/frontend-devtools/public/locales/en/FrontendDevTools.json
@@ -98,6 +98,9 @@
     },
     "CompileShaders": {
       "keyin": "fdt compile shaders"
+    },
+    "SelectElementsById": {
+      "keyin": "fdt select elements"
     }
   }
 }
