Key-ins for controlling tile size modifier.

--- a/core/frontend-devtools/public/locales/en/FrontendDevTools.json
+++ b/core/frontend-devtools/public/locales/en/FrontendDevTools.json
@@ -101,6 +101,12 @@
     },
     "SelectElementsById": {
       "keyin": "fdt select elements"
+    },
+    "DefaultTileSizeMod": {
+      "keyin": "fdt tilesize default"
+    },
+    "ViewportTileSizeMod": {
+      "keyin": "fdt tilesize viewport"
     }
   }
 }
