Fix broken image links
Fix broken image links

--- a/docs/changehistory/1.8.0.md
+++ b/docs/changehistory/1.8.0.md
@@ -8,11 +8,11 @@ iModel.js now officially supports Node 12 starting with LTS version of 12.13.0. 
 
 iModel.js now displays an icon in the lower left corner of viewports to provide credit attribution for software or data authors.
 
-![iModel.js icon](../learning/frontend/imodeljs_icon.png "Example showing iModel.js icon")
+![iModel.js icon](../learning/frontend/imodeljs_icon.jpg "Example showing iModel.js icon")
 
 When the cursor moves over the icon, a set of *Logo Cards* with notices and logos for the content of the view appears. Applications may also add their own Logo Card to display information about their authors, versions, status, etc.
 
-![logo cards](../learning/frontend/logo-cards.png "Example logo cards")
+![logo cards](../learning/frontend/logo-cards.jpg "Example logo cards")
 
 If the user clicks or taps on the iModel.js icon, a modal dialog opens showing the logo cards.
 
