ViewState3d.allow3dManipulations.

--- a/test-apps/display-test-app/public/locales/en/SVTTools.json
+++ b/test-apps/display-test-app/public/locales/en/SVTTools.json
@@ -76,6 +76,9 @@
     },
     "RecordFps": {
       "keyin": "dta record fps"
+    },
+    "Toggle3dManipulations": {
+      "keyin": "dta manip3d"
     }
   }
 }
