Tool for overriding subcategory priority

--- a/core/frontend-devtools/public/locales/en/FrontendDevTools.json
+++ b/core/frontend-devtools/public/locales/en/FrontendDevTools.json
@@ -119,6 +119,9 @@
     },
     "ChangeLayerSettings": {
       "keyin": "fdt layer set"
+    },
+    "OverrideSubCategoryPriority": {
+      "keyin": "fdt subcat priority"
     }
   }
 }
