TileTree JSON includes max initial tiles to skip. Tool for visualizing tile tree ranges. BF #259700 #259704

--- a/core/frontend-devtools/public/locales/en/FrontendDevTools.json
+++ b/core/frontend-devtools/public/locales/en/FrontendDevTools.json
@@ -57,6 +57,9 @@
     "ShowTileVolumes": {
       "keyin": "fdt tile bounds"
     },
+    "ToggleTileTreeBoundsDecoration": {
+      "keyin": "fdt tiletree bounds"
+    },
     "TogglePrimitiveVisibility": {
       "keyin": "fdt visibility"
     },
